--- a/inc/custom.css
+++ b/inc/custom.css
@@ -531,3 +531,8 @@ footer .nav-link:hover {
     padding: 2% 5%;
     right: 0px;
 }
+
+.category_name:hover {
+    box-shadow: 1px 2px 16px #ccc;
+    transition: 0.2s ease-in-out;
+}
