--- a/inc/custom.css
+++ b/inc/custom.css
@@ -536,3 +536,81 @@ footer .nav-link:hover {
     box-shadow: 1px 2px 16px #ccc;
     transition: 0.2s ease-in-out;
 }
+
+
+/* Details page products image part */
+/* Position the image container (needed to position the left and right arrows) */
+.product-image .container {
+    position: relative;
+}
+
+/* Hide the images by default */
+.product-image .mySlides {
+    display: none;
+    background: #eee;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.product-image .cursor {
+    cursor: pointer;
+}
+
+/* Next & previous buttons */
+.product-image .prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: #023021;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.product-image .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.product-image .prev:hover,
+.next:hover {
+    background-color: #ccc;
+}
+
+/* Number text (1/3 etc) */
+.product-image .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.product-image .product-image .row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Six columns side by side */
+.product-image .column {
+    float: left;
+    width: 16.66%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.product-image .demo {
+    opacity: 0.6;
+}
+
+.product-image .active,
+.demo:hover {
+    opacity: 1;
+}
